k8s/cluster-apps/redlib/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redlib
  name: redlib
  namespace: redlib
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: redlib
  type: ClusterIP
