k8s/cluster-apps/redlib/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: redlib
  name: redlib
  namespace: redlib
spec:
  ingressClassName: traefik
  rules:
    - host: reddit.k8s.javydekoning.com
      http:
        paths:
          - backend:
              service:
                name: redlib
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - reddit.k8s.javydekoning.com
